fixes play icon alignment on arabic site

--- a/src/assets/scss/organisms/_lang-ar.scss
+++ b/src/assets/scss/organisms/_lang-ar.scss
@@ -77,4 +77,15 @@
   label.control-label {
     width: 83.33333333%; //col-md-10
   }
+
+  .dit-btn-home__video{
+
+    .glyphicon-play{
+      padding-top: 8px;
+      @media (max-width: $screen-md-max) {
+      padding-top: 6px;
+      }
+    }
+
+  }
 }
